<resources>
    <string name="app_name">League of Legend Tuto</string>

    <string name="action_settings">Settings</string>
    <string name="hintEditText">Nom du joueur</string>
    <string name="rechercher">Rechercher</string>
    <string name="title_activity_historique">HistoriqueActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="statistiques">Statistiques</string>
    <string name="contact">Contact</string>
    <string name="apropos">A Propos</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_details_match">DetailsMatchActivity</string>
    <string name="vainqueur">Vainqueurs</string>
    <string name="perdant">Perdants</string>
    <string name="title_activity_champions">ChampionsActivity</string>
    <string name="champions">Champions</string>
</resources>
